msf-chn-admin/k8s/Service-msf-chn-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: msf-chn-adminservice
  labels:
    app: msf-chn-adminservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: msf-chn-adminservice
