msf-chn-admin/k8s/Virtualservice-msf-chn-admin.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: msf-chn-adminservice-routes
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: "/api/msf-chn-adminservice/"
      route:
        - destination:
            host: msf-chn-adminservice.default.svc.cluster.local
            port:
              number: 8080
      timeout: 4s
